# dock_station

./: .gitignore  README.md  README_DOCKING_MANAGER.md
aruco_docking/config/: docking_params_real.yaml  docking_params_sim.yaml
aruco_docking/launch/: docking_real.launch.py
aruco_docking/models/charging_dock/: model.sdf
aruco_docking/models/charging_dock/meshes/: base_carregamento.stl
aruco_docking/nodes/: charging_manager.py  dock_pose_estimator.py
aruco_docking_real/: CMakeLists.txt  README.md  package.xml
aruco_docking_real/config/: docking_params_real.yaml  usb_cam_params.yaml
aruco_docking_real/launch/: camera_real.launch.py  docking_real.launch.py
aruco_docking_real/nodes/: dock_pose_estimator.py
aruco_docking_sim/: CMakeLists.txt  README.md  package.xml
aruco_docking_sim/config/: docking_params_real.yaml
aruco_docking_sim/models/charging_dock/: model.config
aruco_docking_sim/nodes/: charging_manager.py
config/: c270.yaml  docking_params_real.yaml  docking_params_sim.yaml
launch/: camera_usb.launch.py  docking_real.launch.py  docking_sim.launch.py
lidar_docking/: CMakeLists.txt  README.md  package.xml
lidar_docking/config/: lidar_docking_params.yaml
lidar_docking/launch/: lidar_docking.launch.py
lidar_docking/nodes/: lidar_dock_detector.py  lidar_docking_manager.py
src/lidar_auto_docking/: CMakeLists.txt  package.xml
src/lidar_auto_docking/config/: autodock_params.yaml
src/lidar_auto_docking/include/lidar_auto_docking/: autodock.h  controller.h  dock_detection_utils.h  perception.h  scan_rotation.h
src/lidar_auto_docking/initial_dock_pose/: dock_ws_dock.json
src/lidar_auto_docking/launch/: dock_ws_auto_start.launch.py  dock_ws_autodock_sim.launch.py  dock_ws_send_goal.launch.py  dockpose_detector_launch.py  dockpose_saver_launch.py  dockrobot_launch.py  nav2_dock.launch.py  undock_robot_launch.py
src/lidar_auto_docking/lidar_auto_docking/: dock_pose_saver_backend.py  dock_pose_saver_cli.py  dock_pose_saver_core.py  dock_pose_saver_ros.py
src/lidar_auto_docking/scripts/: dock_pose_saver_cli  dock_saver.py  dock_ws_auto_start.py
src/lidar_auto_docking/src/: autodock.cpp  controller.cpp  dock_coordinates.cpp  perception.cpp  scan_rotation.cpp
src/lidar_auto_docking/test/: test_dock_detection.cpp  test_dock_pose_saver.py  test_scan_rotation.cpp
src/lidar_auto_docking_messages/: CMakeLists.txt  package.xml
src/lidar_auto_docking_messages/action/: Dock.action
src/lidar_auto_docking_messages/msg/: DockDetection.msg
src/nav_hub/: .gitignore  CMakeLists.txt  README.md
src/nav_hub/config/: launch_params.yaml  sim_nav_params.yaml
src/nav_hub/graphs/: aceleradoras.json
src/nav_hub/launch/: essentials.launch.py  localization_only.launch.py
src/nav_hub/launch/route_graph/: sim_main_route_graph.launch.py  sim_nav_graph.launch.py
src/nav_hub/route/route_graph/: goals_aceleradoras.json
src/nav_hub/src/: sim_main_route_graph.cpp
src/sim_bot/: CMakeLists.txt  GIT_WORKFLOW.md  OREGON_INTEGRATION.md  README.md  SIM_BOT_TO_OREGON.md  package.xml
src/sim_bot/config/: launch_params.yaml  nav_params.yaml
src/sim_bot/description/: camera.xacro  depth_camera.xacro  palmares_bot.urdf.xacro  palmares_lidar.xacro  palmares_tof_lidar.xacro
src/sim_bot/launch/: README.md  sim_essentials.launch.py  sim_manager.launch.py  sim_map_only.launch.py  sim_navigation.launch.py  slam.launch.py  teleop.launch.py
src/sim_bot/meshes/: palmares.stl
src/sim_bot/models/aceleradora_world/: model.config  model.sdf
src/sim_bot/models/lidar_dock/: model.config  model.sdf
src/sim_bot/rviz/: bot.rviz
src/sim_bot/scripts/: graph_visualizer.py  route_to_poses.py
src/sim_bot/worlds/: aceleradora.world  empty.world  test.world
