<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_bot</name>
  <version>0.2.0</version>
  <description>ROS2 package for simulated robots</description>
  <maintainer email="ingalexanderlevy@gmail.com">Alex Levy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_common</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_msgs</depend>
  <depend>ament_index_python</depend>
  <depend>geometry_msgs</depend>
  <depend>python3-yaml</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_hub</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
